--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=18 <=20"
+  },
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "mercadopago": "git+https://github.com/mercadopago/sdk-nodejs.git",
+    "mercadopago": "^2.0.16",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "@supabase/supabase-js": "^2.43.1",
