--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node": ">=18 <=20"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node index.js"
