--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "guied-subscriptions-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "API de Assinaturas Guied (Checkout + Webhook + Supabase)",
   "type": "module",
-  "engines": {
-    "node": "18.x"
-  },
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "node --watch index.js"
   },
   "dependencies": {
-    "mercadopago": "^2.0.16",
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.45.4",
     "cors": "^2.8.5",
-    "@supabase/supabase-js": "^2.43.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2"
   }
 }
